@@ -57,6 +57,7 @@ public class HttpUnitSuite extends ConditionalTestSuite {
         result.addTest( WebAppletTest.suite() );
         result.addTest( CookieTest.suite() );
         result.addTest( ParsingTestSuite.suite() );
+        result.addTest( NormalizeURLTest.suite() );
 
         if (HTMLParserFactory.getHTMLParser().getClass().getName().indexOf("NekoHTML") >= 0) result.addTest( NekoEnhancedScriptingTest.suite() );
         addOptionalTestCase( result, "com.meterware.httpunit.XMLPageTest" );
